add new layout session gaurd and many more

--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="./admin/css/style.css">
+  <link href="../admin/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  <link href="../admin/css/icons.css" rel="stylesheet" type="text/css" />
+  <link href="../admin/css/style.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-  {{!-- {{> header}} <!-- Include the header partial --> --}}
-  Login
+<body> 
   <main>
+    <div class="account-pages"></div>
+    <div class="clearfix"></div>
     {{{body}}} <!-- Main content will be injected here -->
   </main>
-  
-  {{!-- {{> footer}} <!-- Include the footer partial --> --}}
 </body>
 </html>
