add listing type layouts only

--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -75,7 +75,7 @@
                                 </a>
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <a href="/admin/logout" class="dropdown-item notify-item">
                                     <i class="md md-settings-power"></i> <span>Logout</span>
                                 </a>
 
