--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -15,6 +15,13 @@
                                     <li><a href="/admin/category/add">Add New Category</a></li>
                                 </ul>
                             </li>
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-menu-alt"></i> <span> Listing Types </span> <span class="menu-arrow"></span></a>
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/listing-types">Listing Types</a></li>
+                                    <li><a href="/admin/listing-type/add">Add New Type</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         <div class="clearfix"></div>
                     </div>
