--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -22,6 +22,13 @@
                                     <li><a href="/admin/listing-type/add">Add New Type</a></li>
                                 </ul>
                             </li>
+                            <li class="has_sub">
+                                <a href="javascript:void(0);" class="waves-effect"><i class="ti-user"></i> <span> Admin Users </span> <span class="menu-arrow"></span></a>
+                                {{!-- <ul class="list-unstyled">
+                                    <li><a href="/admin/custome-fields">Custome Fields</a></li>
+                                    <li><a href="/admin/custome-field/add">Add Custome Field</a></li>
+                                </ul> --}}
+                            </li>
                         </ul>
                         <div class="clearfix"></div>
                     </div>
