--- a/views/admin/category/add_category.hbs
+++ b/views/admin/category/add_category.hbs
@@ -1,24 +1,205 @@
-    <!-- ============================================================== -->
-            <!-- Start right Content here -->
-            <!-- ============================================================== -->
-                <div class="content">
-                    <div class="container-fluid">
-                        <!-- Page-Title -->
+<!-- ============================================================== -->
+<!-- Start right Content here -->
+<!-- ============================================================== -->
+<div class="content">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <h4 class="page-title">Add Category</h4>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/admin/dashboard">Adolaa</a></li>
+                <li class="breadcrumb-item"><a href="/admin/categories">Categories</a></li>
+                <li class="breadcrumb-item active">Add Category</li>
+            </ol>
+        </div>
+    </div>
+<div class="row">
+    <div class="col-md-6">
+        <a href="/admin/categories" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"><i class="md md-list"></i> All Categories</a>
+    </div>
+</div>
+        <div class="row justify-content-md-center">
+        <div class="col-sm-12 col-md-9">
+            <div id="addCat" class="card-box">
+                <h4 class="text-dark header-title m-t-0">Add Category</h4>
+                {{#if flash.error}}
+                    <div class="alert alert-danger">
+                    {{{flash.error}}}
+                    </div>
+                {{/if}}
+                {{#if flash.success}}
+                    <div class="alert alert-success">
+                    {{{flash.success}}}
+                    </div>
+                {{/if}}
+                <form action="/admin/category/save" method="post" enctype='multipart/form-data'>
+                    <div class="mb-3">
+                        <label for="example-select" class="form-label">Parent Category</label>
+                        <select class="form-select form-control" id="example-select" name="parent_category">
+                            <option value="">Select A Category</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                            <option value="">4</option>
+                            <option value="">5</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Name</label>
+                        <input name="name" autocomplete="name" type="text" id="name" class="form-control" required="">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Slug</label>
+                        <input name="slug" autocomplete="name" type="text" id="name" class="form-control" required="">
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label" for="">Icon</label>
+                        <div >
+                            <button class="btn btn-secondary" role="iconpicker" name="icon"></button>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="">Image</label>
+                        <div>
+                            <input class="dropify" type="file" data-plugins="dropify" data-default-file="">
+                        </div>
+                        
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="">Description</label>
+                        <textarea id="tinymce-description"  name="description" rows="5" class="form-control tinymce" aria-hidden="true"></textarea>
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label" for="">Type</label>
+                        <select class="form-select form-control" id="example-select" name="parent_category">
+                                <option value="">Select A Type</option>
+                            {{#if allTypes.length}}
+                            {{#each allTypes as |ty|}}
+                                <option value="{{ty._id}}">{{ty.name}}</option>
+                            {{/each}}
+                            {{/if}}
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="">Status</label>
+                        <div>
+                            <input type="checkbox" checked="" data-plugin="switchery" data-color="#1bb99a" data-switchery="true" name="status">
+                        </div>
+                    </div>
+
+                    <h4 class="text-dark header-title m-t-0">Custom Fields</h4>
+                    <div class="mb-3">
+                        <hr style="border: 1px dashed #EFEFEF;" class="mt-0 mb-1">
+                    </div>
+                    <div class="mb-3">
+                        <custom-fields v-bind:survey="survey" v-bind:datas="datas"></custom-fields>
+                        
                         <div class="row">
-                            <div class="col-sm-12">
-                                <h4 class="page-title">Add Category</h4>
-                                <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Adolaa</a></li>
-                                    <li class="breadcrumb-item active">Add Category</li>
-                                </ol>
+                            <div class="col-md-4">
+                                <label class="form-label" for="">Field Name</label>
+                                <input name="fieldName" autocomplete="fieldName" type="text" id="fieldName" class="form-control" >
+                                {{!-- <span class="err-msg"  v-if="question.question==\'\'">Please enter field name.</span>\ --}}
+                            </div>
+                            <div class="col-md-4">
+                                <label class="form-label" for="">Field Type</label>
+                                <select name="fieldType" class="form-select form-control">
+                                    <option value="text">Text</option>
+                                    <option value="textarea">Textarea</option>
+                                    <option value="checkbox">Checkbox</option>
+                                    <option value="checkbox_multiple">Checkbox (Multiple)</option>
+                                    <option value="select">Select Box</option>
+                                    <option value="radio">Radio</option>
+                                    <option value="file">File</option>
+                                    <option value="url">URL</option>
+                                    <option value="number">Number</option>
+                                    <option value="date">Date</option>
+                                    <option value="date_time">Date Time</option>
+                                    <option value="date_range">Date Range</option>
+                                    <option value="video">Video (Youtube, Vimeo)</option>
+                                </select>
+                            </div>
+                            <div class="col-md-2">
+                                <label class="form-label" for="">Required</label>
+                                <div>
+                                    <input type="checkbox" data-plugin="switchery" data-color="#1bb99a" data-switchery="true" name="fieldRequired">
+                                </div> 
+                            </div>
+                            <div class="col-md-2">
+                                <label class="form-label" for="">Status</label>
+                                <div>
+                                    <input id="st" type="checkbox" checked="" data-color="#1bb99a" data-switchery="true" name="fieldStatus">
+                                </div> 
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <button type="button" class="btn btn-default btn-md waves-effect waves-light m-b-30"><i class="md md-add"></i>Add More</button>
                             </div>
                         </div>
-                        <!-- end row -->
                         
-                    </div> <!-- container -->
+                    </div>
+                    <div class="mb-3">
+                        <hr style="border: 1px dashed #EFEFEF;" class="mt-0 mb-1">
+                    </div>
+                    <h4 class="text-dark header-title m-t-0">SEO Tags</h4>
+                    <div class="mb-3">
+                        <hr style="border: 1px dashed #EFEFEF;" class="mt-0 mb-1">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Title</label>
+                        <input name="seoTitle" autocomplete="title" type="text" id="title" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Description</label>
+                        <textarea  name="seoDescription" rows="4" class="form-control" aria-hidden="true"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Keywords</label>
+                        <textarea  name="seoKeywords" rows="5" class="form-control" aria-hidden="true"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <hr style="border: 1px dashed #EFEFEF;" class="mt-0 mb-1">
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class=" waves-light btn btn-success btn-md waves-effect"><i class="md md-add"></i>Save</button>
+                    </div>
+                </form>
 
-                </div> <!-- content -->
+            </div>
+        </div>
+    </div>
+</div> <!-- container -->
+</div> <!-- content -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-iconpicker/1.10.0/css/bootstrap-iconpicker.min.css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-iconpicker/1.10.0/js/bootstrap-iconpicker.bundle.min.js"></script>
+{{!-- <script src="/admin/js/tinymce.min.js"></script> --}}
+<script src="https://cdn.tiny.cloud/1/xe0yrjzxxk4vt0m1103e4dazp7y4qisilkaiji7iozziavt1/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+<script type="text/javascript" src="https://jeremyfagis.github.io/dropify/dist/js/dropify.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://jeremyfagis.github.io/dropify/dist/css/dropify.min.css">
+<script type="text/javascript" src="/admin/js/switchery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/admin/css/switchery.min.css">
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="/admin/js/addform.js"></script>
+<script type="text/javascript">
+    tinymce.init({
+        selector: "textarea.tinymce",
+        language: 'en',
+        directionality: 'ltr',
+        height: 400,
+        menubar: false,
+        statusbar: false,
+        plugins: 'lists link table code',
+        toolbar: 'undo redo | bold italic underline | forecolor backcolor | bullist numlist blockquote table | link unlink | alignleft aligncenter alignright | outdent indent | fontsizeselect | code',
+     });
+     $('.dropify').dropify();
 
-               
+        //var elem = document.querySelector('.switchery')
+        //new Switchery(elem);
+</script>
+
+
 
 
