--- a/views/admin/category/categories_list.hbs
+++ b/views/admin/category/categories_list.hbs
@@ -14,6 +14,11 @@
                                 </ol>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="/admin/category/add" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"><i class="md md-add"></i> Add New</a>
+                            </div>
+                        </div>
                         <!-- end row -->
 
 
