--- a/views/partials/admin_footer.hbs
+++ b/views/partials/admin_footer.hbs
@@ -1,3 +1,3 @@
  <footer class="footer text-right">
-                    &copy; 2016 - 2018. All rights reserved.
+    &copy; 2024. All rights reserved.
 </footer>
