--- a/views/partials/admin_nav.hbs
+++ b/views/partials/admin_nav.hbs
@@ -24,10 +24,13 @@
                             </li>
                             <li class="has_sub">
                                 <a href="javascript:void(0);" class="waves-effect"><i class="ti-user"></i> <span> Admin Users </span> <span class="menu-arrow"></span></a>
-                                {{!-- <ul class="list-unstyled">
-                                    <li><a href="/admin/custome-fields">Custome Fields</a></li>
-                                    <li><a href="/admin/custome-field/add">Add Custome Field</a></li>
-                                </ul> --}}
+                                <ul class="list-unstyled">
+                                    <li><a href="/admin/users">Users List</a></li>
+                                    <li><a href="/admin/user/add">Add New</a></li>
+                                    <li><a href="/admin/user/roles">Roles</a></li>
+                                    <li><a href="/admin/user/role/add">Add Roles</a></li>
+                                    <li><a href="/admin/user/permissions">Permissions</a></li>
+                                </ul>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
