--- a/views/admin/category/categories_list.hbs
+++ b/views/admin/category/categories_list.hbs
@@ -19,14 +19,120 @@
                                 <a href="/admin/category/add" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"><i class="md md-add"></i> Add New</a>
                             </div>
                         </div>
+
+                         <div class="row justify-content-md-center">
+                            <div class="col-sm-12 col-md-12">
+                                <div class="card-box">
+                                    {{#if flash.error}}
+                                        <div class="alert alert-danger">
+                                        {{{flash.error}}}
+                                        </div>
+                                    {{/if}}
+                                    {{#if flash.success}}
+                                        <div class="alert alert-success">
+                                        {{{flash.success}}}
+                                        </div>
+                                    {{/if}}
+                                        <h4 class="text-dark header-title m-t-0">Categories List</h4>
+                                        <div class="table-responsive">
+                                                <table class="table table-actions-bar">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>Sr. No.</th>
+                                                        <th>Name</th>
+                                                        <th>Icon</th>
+                                                        <th>Parent Category</th>
+                                                        <th>Type</th>
+                                                        <th>Status</th>
+                                                        <th>Created</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    {{#if categories.length }}
+                                                    {{#each categories }}
+                                                     
+                                                   <tr>
+                                                        <td>{{incrementedIndex @index}}</td>
+                                                        <td>{{{this.name}}}</td>
+                                                        <td>
+                                                            {{#if this.icon}}
+                                                               <i class="{{this.icon}} fa-2x"></i>
+                                                            {{else}}
+                                                                NA
+                                                            {{/if}}
+                                                            
+                                                        </td>
+                                                        <td>
+                                                            {{#if this.parentName}}
+                                                                {{this.parentName}}
+                                                            {{else}}
+                                                                NA
+                                                            {{/if}}
+                                                        </td>
+                                                        <td>
+                                                            {{#if this.typeName}}
+                                                                {{this.typeName}}
+                                                            {{else}}
+                                                                NA
+                                                            {{/if}}
+                                                        </td>
+                                                        <td>
+                                                            {{#if this.status }}
+                                                                 <input id="{{this._id}}" class="switch" type="checkbox" checked=""  name="status" data-id="{{this._id}}">
+                                                            {{else}}
+                                                                <input id="{{this._id}}" class="switch" type="checkbox"  name="status" data-id="{{this._id}}">
+                                                            {{/if}}
+                                                        </td>
+                                                        <td>{{formatDate this.createdAt}}</td>
+                                                        <td>
+                                                        <a href="/admin/category/edit/{{this._id}}" class="btn btn-success waves-effect waves-light"><i class="md md-edit"></i></a>
+
+                                                            <form action="/admin/delete-category/{{this._id}}" method="POST" style="display:inline;">
+                                                                <input type="hidden" name="_method" value="DELETE">
+                                                                <button class="btn btn-danger waves-effect waves-light" type="submit"><i class="md md-close"></i></button>
+                                                            </form>
+                                                        </td>
+                                                    </tr>
+                                                   {{/each}}
+                                                   {{else}}
+                                                   <h4 class="text-dark header-title m-t-0">No Category found</h4>
+                                                   {{/if}}
+                                                    </tbody>
+                                                </table>
+                                        </div>
+                                        {{> paging pagination=pagination}}
+                                    </div>
+                                </div>
+                        </div>
                         <!-- end row -->
-
-
-                        
                     </div> <!-- container -->
-
                 </div> <!-- content -->
-
+<script>
+    $(function(){
+        //document.getElementById('#status');
+        var switches = Array.prototype.slice.call(document.querySelectorAll('.switch'));
+        switches.forEach(function(switchElem) {
+            var switchery = new Switchery(switchElem);
+            switchElem.onchange = function() {
+                var catForm = new FormData();
+                var isChecked = switchElem.checked;
+                catForm.append('status',isChecked);
+                fetch('/admin/category/update-status/'+switchElem.id, {
+                    method: 'POST',
+                    body:catForm
+                })
+                .then(response => response.text())
+                .then(result => {
+                    var r = JSON.parse(result);
+                    console.log(r);
+                }).catch(error => {
+                    console.error('Error uploading file:', error);
+                });
+            };
+        });
+    });
+</script>
                
 
 
