--- a/views/admin/category/listing_type_list.hbs
+++ b/views/admin/category/listing_type_list.hbs
@@ -34,8 +34,6 @@
                                     {{/if}}
                                         <h4 class="text-dark header-title m-t-0">Listing Types</h4>
                                         <div class="table-responsive">
-                                           
-                                            {{{count}}}
                                                 <table class="table table-actions-bar">
                                                     <thead>
                                                     <tr>
@@ -64,7 +62,7 @@
                                                             
                                                             <form action="/admin/delete-listing-type/{{this._id}}" method="POST" style="display:inline;">
                                                                 <input type="hidden" name="_method" value="DELETE">
-                                                                <button class="table-action-btn" type="submit"><i class="md md-close"></i></button>
+                                                                <button class="btn btn-danger waves-effect waves-light" type="submit"><i class="md md-close"></i></button>
                                                             </form>
                                                         </td>
                                                     </tr>
