--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -8,11 +8,17 @@
   <link href="/admin/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="/admin/css/icons.css" rel="stylesheet" type="text/css" />
   <link href="/admin/css/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="/admin/css/switchery.min.css">
+<link rel="stylesheet" type="text/css" href="/admin/css/ladda.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"/>
   <script src="/admin/js/modernizr.min.js"></script>
   {{!-- <script src="/admin/js/jquery.min.js"></script> --}}
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="/admin/js/popper.min.js"></script><!-- Popper for Bootstrap -->
   <script src="/admin/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/admin/js/switchery.min.js"></script>
+<script type="text/javascript" src="/admin/js/spin.min.js"></script>
+<script type="text/javascript" src="/admin/js/ladda.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body class="fixed-left"> 
@@ -28,6 +34,7 @@
     var resizefunc = [];
   </script>
         <!-- jQuery  -->
+
   <script src="/admin/js/detect.js"></script>
   <script src="/admin/js/fastclick.js"></script>
   <script src="/admin/js/jquery.slimscroll.js"></script>
