--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -56,7 +56,7 @@
                             <div class="dropdown-menu dropdown-menu-right profile-dropdown " aria-labelledby="Preview">
                                 <!-- item-->
                                 <div class="dropdown-item noti-title">
-                                    <h5 class="text-overflow"><small>Welcome ! John</small> </h5>
+                                    <h5 class="text-overflow"><small>Welcome ! {{user.name}}</small> </h5>
                                 </div>
 
                                 <!-- item-->
@@ -70,9 +70,9 @@
                                 </a>
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                {{!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     <i class="md md-lock-open"></i> <span>Lock Screen</span>
-                                </a>
+                                </a> --}}
 
                                 <!-- item-->
                                 <a href="/admin/logout" class="dropdown-item notify-item">
@@ -97,7 +97,6 @@
                             </form>
                         </li>
                     </ul>
-
                 </nav>
 
             </div>
