--- a/views/admin/user/users.hbs
+++ b/views/admin/user/users.hbs
@@ -1,28 +1,27 @@
     <!-- ============================================================== -->
             <!-- Start right Content here -->
             <!-- ============================================================== -->
-            
                 <div class="content">
                     <div class="container-fluid">
                         <!-- Page-Title -->
                         <div class="row">
                             <div class="col-sm-12">
-                                <h4 class="page-title">Categories List</h4>
+                                <h4 class="page-title">All Users</h4>
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="#">Adolaa</a></li>
-                                    <li class="breadcrumb-item active">Categories List</li>
+                                    <li class="breadcrumb-item"><a href="/admin/dashboard">Adolaa</a></li>
+                                    <li class="breadcrumb-item active">Users</li>
                                 </ol>
                             </div>
                         </div>
-                        <div class="row">
+                    <div class="row">
                             <div class="col-md-6">
-                                <a href="/admin/category/add" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right"><i class="md md-add"></i> Add New</a>
+                                <a href="/admin/user/add" class="btn btn-default btn-md waves-effect waves-light m-b-30 pull-right" ><i class="md md-add"></i> Add User</a>
                             </div>
                         </div>
-
-                         <div class="row justify-content-md-center">
+                        <div class="row justify-content-md-center">
                             <div class="col-sm-12 col-md-12">
                                 <div class="card-box">
+                                    <h4 class="text-dark header-title m-t-0"> All Users</h4>
                                     {{#if flash.error}}
                                         <div class="alert alert-danger">
                                         {{{flash.error}}}
@@ -33,50 +32,30 @@
                                         {{{flash.success}}}
                                         </div>
                                     {{/if}}
-                                        <h4 class="text-dark header-title m-t-0">Categories List</h4>
-                                        <div class="table-responsive">
+
+                                    <div class="table-responsive">
                                                 <table class="table table-actions-bar">
                                                     <thead>
                                                     <tr>
                                                         <th>Sr. No.</th>
+                                                        <th>Role</th>
                                                         <th>Name</th>
-                                                        <th>Icon</th>
-                                                        <th>Parent Category</th>
-                                                        <th>Type</th>
+                                                        <th>Email</th>
+                                                        <th>Phone</th>
                                                         <th>Status</th>
                                                         <th>Created</th>
                                                         <th>Action</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
-                                                    {{#if categories.length }}
-                                                    {{#each categories }}
-                                                     
+                                                    {{#if users.length }}
+                                                    {{#each users }}
                                                    <tr>
                                                         <td>{{incrementedIndex @index}}</td>
+                                                          <td>{{{ternary this.roleName this.roleName 'NA'}}}</td>
                                                         <td>{{{this.name}}}</td>
-                                                        <td>
-                                                            {{#if this.icon}}
-                                                               <i class="{{this.icon}} fa-2x"></i>
-                                                            {{else}}
-                                                                NA
-                                                            {{/if}}
-                                                            
-                                                        </td>
-                                                        <td>
-                                                            {{#if this.parentName}}
-                                                                {{this.parentName}}
-                                                            {{else}}
-                                                                NA
-                                                            {{/if}}
-                                                        </td>
-                                                        <td>
-                                                            {{#if this.typeName}}
-                                                                {{this.typeName}}
-                                                            {{else}}
-                                                                NA
-                                                            {{/if}}
-                                                        </td>
+                                                        <td>{{this.email}}</td>
+                                                        <td>{{this.phone}}</td>
                                                         <td>
                                                             {{#if this.status }}
                                                                  <input id="{{this._id}}" class="switch" type="checkbox" checked=""  name="status" data-id="{{this._id}}">
@@ -84,38 +63,36 @@
                                                                 <input id="{{this._id}}" class="switch" type="checkbox"  name="status" data-id="{{this._id}}">
                                                             {{/if}}
                                                         </td>
-                                                        <td>{{formatDate this.createdAt}}</td>
                                                         <td>
-                                                        <a href="/admin/category/edit/{{this._id}}" class="btn btn-success waves-effect waves-light"><i class="md md-edit"></i></a>
-
-                                                            <form action="/admin/delete-category/{{this._id}}" method="POST" style="display:inline;">
-                                                                <input type="hidden" name="_method" value="DELETE">
-                                                                <button class="btn btn-danger waves-effect waves-light" type="submit"><i class="md md-close"></i></button>
-                                                            </form>
+                                                            {{formatDate this.createdAt}}
+                                                        </td>
+                                                        <td>
+                                                             <a href="/admin/user/edit/{{this._id}}" class="btn btn-success waves-effect waves-light"><i class="md md-edit"></i></a>
                                                         </td>
                                                     </tr>
                                                    {{/each}}
                                                    {{else}}
-                                                   <h4 class="text-dark header-title m-t-0">No Category found</h4>
+                                                   <h4 class="text-dark header-title m-t-0">No User</h4>
                                                    {{/if}}
                                                     </tbody>
                                                 </table>
                                         </div>
                                         {{> paging pagination=pagination}}
-                                    </div>
                                 </div>
+                            </div>
                         </div>
                         <!-- end row -->
+                        
                     </div> <!-- container -->
-                </div> <!-- content -->
+
+                </div> <!-- content -->          
 <script>
     $(function(){
-        //document.getElementById('#status');
         var switches = Array.prototype.slice.call(document.querySelectorAll('.switch'));
         switches.forEach(function(switchElem) {
             var switchery = new Switchery(switchElem);
             switchElem.onchange = function() {
-                fetch('/admin/category/change-status/'+switchElem.id, {
+                fetch('/admin/user/change-status/'+switchElem.id, {
                     method: 'POST'
                 })
                 .then(response => response.text())
@@ -129,6 +106,3 @@
         });
     });
 </script>
-               
-
-
